picture in picture functionality added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <video src="" id="video" controls height="360" width="640" hidden></video>
+    <video
+      src="https://www.youtube.com/watch?v=_cbRlq9h-38"
+      id="video"
+      controls
+      height="360"
+      width="640"
+      hidden
+    ></video>
     <div class="button-container">
       <button id="button">START</button>
     </div>
